plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'force.ssafy'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-security' //시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-validation'// @Valid
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' //jwt
	implementation 'org.springframework.boot:spring-boot-starter-webflux' // API 호출용 webflux
	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5") // swagger
	implementation 'org.springframework.boot:spring-boot-starter-batch' // 스프링 배치
	testImplementation 'org.springframework.batch:spring-batch-test' // 스프링 배치 테스트용
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// WebFlux 의존성
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Netty DNS resolver for MacOS
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.94.Final:osx-aarch_64'
	//s3 연동하기위한 의존성 추가
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.689'

}

tasks.named('test') {
	useJUnitPlatform()
}
